2012-02-01  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-registry.el (gnus-registry-fixup-registry): Move the message to
	a higher level to silence compilation.

	* gnus-art.el (gnus-shr-put-image): Take and pass on a `flags'
	parameter to allow controlling the scaling.

	* shr.el (shr-zoom-image): New command and keystroke.
	(shr-put-image): Take a `size' flag to say how to scale the image.

	* gnus-compat.el: Redefine `delete-directory' to provide recursive
	deletion unless already defined.

	* gnus.el (gnus-compat): Require it.

	* gnus-compat.el: New file.

	* gnus-start.el (gnus-clean-old-newsrc): New function.
	(gnus-read-newsrc-file): Use it.

	* mm-archive.el (mm-dissect-archive): Use it to get all file names.
	Use recursive deletion.
	(mm-dissect-archive): Add support for zip files.

	* gnus-util.el (gnus-recursive-directory-files): New function.

	* mm-archive.el (mm-archive-list-files): Inline text and image parts.
	(mm-archive-decoders): Add tgz support.

	* mm-decode.el (mm-shr): Make sure that the HTML ends with a newline.
	Otherwise inserting text into the Gnus buffer can look odd.

	* gnus-art.el (gnus-mime-inline-part): Slight clean-up.

	* mm-archive.el (mm-archive-decoders): Add support for tar.

	* gnus.el (gnus-logo-color-alist): Change the colours for Ma Gnus.

	* nnmail.el (nnmail-extra-headers): Add Cc to the default.

2012-01-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-dissect-singlepart): Check that the decoder exists.

	* mm-archive.el: New file.

	* mm-decode.el (mm-dissect-singlepart): Use it to decode ms-tnef files.

	* mm-util.el (mm-find-buffer-file-coding-system): Comment fix.

	* message.el (message-goto-*): Make all the `message-goto-*' commands
	push the mark before moving point.  This makes it easier to go back to
	where you came from after editing whatever you jumped to.

2012-01-31  Lars Magne Ingebrigtsen  <lars@ingebrigtsen.no>

	* gnus.el: Ma Gnus v0.1 is released.
