@@ -1,5 +1,7 @@
 2012-02-01  Lars Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-compat.el: Require `help-fns' to fix compilation error.
+
 	* gnus-registry.el (gnus-registry-fixup-registry): Move the message to
 	a higher level to silence compilation.
 
